--- a/block-BHaacm/assets/stylesheet/style.css
+++ b/block-BHaacm/assets/stylesheet/style.css
@@ -201,8 +201,8 @@ a {
     padding-top: 12px;
 }
 .pencil-img {
-    width: 80%;
-    margin: 0 40px 0 40px;
+    width: 100%;
+    /* margin: 0 40px 0 40px; */
 
 }
 /* BLOG */
@@ -287,5 +287,8 @@ small {
     }
     .btn {
         margin-bottom: 20px;
+    }
+    .order {
+        order: 1;
     }
 }
